# quack-a-mole

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  Makefile  README.md  docker-compose.yml
.github/workflows/: quack-ci.yml
backend/: Dockerfile  go.mod  go.sum  main.go  main_test.go
backend/internal/mole/: whack_service.go
backend/internal/pond/: pond_manager.go
backend/internal/quacker/: quantum_quacker.go
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx
frontend/src/components/: DuckDashboard.tsx  MoleRadar.tsx  QuackButton.tsx
frontend/src/hooks/: useMoleWhacker.ts  useQuantumQuack.ts
frontend/src/services/: duckAPI.ts  websocketQuacker.ts
ml-service/: Dockerfile  duck_ai.py  requirements.txt
rust-service/: Cargo.toml  Dockerfile
rust-service/src/: main.rs  mole_whacker.rs
scripts/: benchmark_quacks.js  deploy_ducks.sh  initialize_pond.py
shared/constants/: quack_codes.json
shared/proto/: duck.proto
