[package]
name = "mole-whacker"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1